--- a/app/src/main/res/drawable/background_left.xml
+++ b/app/src/main/res/drawable/background_left.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
         android:radius="10dp"
-        android:topRightRadius="0dp"/>
+        android:topLeftRadius="0dp"/>
 
     <solid android:color="@android:color/white"/>
 
