--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,8 +62,29 @@
             android:textColor="#fff"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp">
-
         </Button>
+
+        <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Forgot your password ?"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="end"
+        android:textStyle="bold"
+        android:id="@+id/forgot_password"
+        android:textColor="@color/colorPrimaryDark"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Create a new account ?"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="end"
+            android:textStyle="bold"
+            android:id="@+id/create_account"
+            android:textColor="@color/colorPrimaryDark"/>
     </LinearLayout>
 
 </RelativeLayout>
