--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -73,8 +73,18 @@
             android:textColor="#fff"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp">
-
         </Button>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Already have an account ?"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="end"
+            android:textStyle="bold"
+            android:id="@+id/already_have_an_account"
+            android:textColor="@color/colorPrimaryDark"/>
     </LinearLayout>
 
 </RelativeLayout>
