--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
+    android:padding="5dp"
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp">
 
@@ -17,8 +18,17 @@
         android:layout_toRightOf="@+id/profile_image"
         android:layout_marginLeft="5dp"
         android:text="hello"
-        android:textSize="10dp"
+        android:textSize="18dp"
         android:padding="8dp"
         android:background="@drawable/background_left"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_seen"
+        android:visibility="gone"
+        android:text="seen"
+        android:layout_below="@+id/show_message"
+        />
 
 </RelativeLayout>
