--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:padding="8dp"
+    android:padding="5dp"
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp">
     
@@ -24,9 +24,18 @@
             android:text="hello"
             android:layout_alignParentEnd="true"
             android:id="@+id/show_message"
-            android:textSize="10dp"
+            android:textSize="18dp"
             android:textColor="#fff"
             android:padding="8dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_seen"
+            android:text="seen"
+            android:layout_below="@+id/show_message"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
         
     </RelativeLayout>
     
