--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -5,7 +5,15 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.UsersFragment">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:hint="Search..."
+        android:id="@+id/fu_search_users"/>
+
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@+id/fu_search_users"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fu_recyclerView"/>
