--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -50,4 +50,18 @@
         android:layout_toRightOf="@+id/ui_profile_image"
         android:layout_toEndOf="@id/ui_profile_image"/>
 
+    <TextView
+        android:id="@+id/ui_last_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ui_username"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"
+        android:textSize="12dp"
+        android:layout_toRightOf="@+id/ui_profile_image"
+        android:paddingTop="5dp"
+        android:textStyle="normal"
+        android:textColor="@color/gray"
+        android:maxLines="1"/>
+
 </RelativeLayout>
