--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorPrimary">#36A3A3</color>
     <color name="colorPrimaryDark">#226e6e</color>
     <color name="colorAccent">#ff4081</color>
+    <color name="gray">#aba8a7</color>
 </resources>
